force-app/main/default/objects/OrderItem/fields/Fulfilled_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Fulfilled_Quantity__c</fullName>
    <label>Fulfilled Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>