force-app/main/default/objects/OrderItem/fields/OrderProduct__c.field-meta.xml
<CustomField>
    <fullName>OrderProduct__c</fullName>
    <description>This is Order number and SKU concatenation to get an unique order product that can be used in upsert calls in informatica or any middleware integration</description>
    <externalId>true</externalId>
    <label>OrderProduct</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>