force-app/main/default/objects/OrderItem/fields/OrderProductFormula__c.field-meta.xml
<CustomField>
    <fullName>OrderProductFormula__c</fullName>
    <formula>Order.Oracle_Order_Number__c &amp; Product2.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OrderProductFormula</label>
    <type>Text</type>
</CustomField>