force-app/main/default/objects/OrderItem/fields/Spa_Price__c.field-meta.xml
<CustomField>
    <fullName>Spa_Price__c</fullName>
    <formula>QuoteLineItem.Approved_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Spa Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>